--- a/style.css
+++ b/style.css
@@ -442,6 +442,7 @@ body.light-mode .modal-content {
     align-items: center;
     text-align: center;
     padding: 20px;
+    overflow-y: auto;
 }
 
 #chat-modal .chat-body .chat-icon-large {
@@ -481,6 +482,31 @@ body.light-mode .modal-content {
     cursor: pointer;
 }
 
+.chat-message {
+    display: flex;
+    margin-bottom: 10px;
+}
+
+.chat-message.user {
+    justify-content: flex-end;
+}
+
+.chat-message .message-bubble {
+    padding: 10px 15px;
+    border-radius: 20px;
+    max-width: 70%;
+}
+
+.chat-message.user .message-bubble {
+    background-color: #006400;
+    color: #fff;
+}
+
+.chat-message.bot .message-bubble {
+    background-color: #444;
+    color: #fff;
+}
+
 body.light-mode #chat-modal .modal-content {
     background-color: #f5f5f5;
     color: #000;
@@ -513,6 +539,11 @@ body.light-mode #chat-modal .chat-input input {
 
 body.light-mode #chat-modal .chat-input .material-icons {
     color: #555;
+}
+
+body.light-mode .chat-message.bot .message-bubble {
+    background-color: #eee;
+    color: #000;
 }
 
 
